--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "/oclif.manifest.json"
   ],
   "scripts": {
+    "predev": "npm run build && clear",
+    "dev": "node ./bin/run.js",
     "build": "shx rm -rf dist && tsc -b",
     "lint": "eslint . --ext .ts",
     "prepack": "npm run build && oclif manifest && oclif readme",
