--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
   "dependencies": {
     "@oclif/core": "^3",
     "@oclif/plugin-help": "^6",
-    "@oclif/plugin-plugins": "^4"
+    "@oclif/plugin-plugins": "^4",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@oclif/prettier-config": "^0.2.1",
