--- a/package.json
+++ b/package.json
@@ -51,10 +51,14 @@
     "@oclif/core": "^3",
     "@oclif/plugin-help": "^6",
     "@oclif/plugin-plugins": "^4",
+    "@sap-cloud-sdk/odata-v2": "^3.12.0",
+    "@sap-cloud-sdk/util": "^3.12.0",
+    "moment": "^2.30.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@oclif/prettier-config": "^0.2.1",
+    "@sap-cloud-sdk/generator": "^3.12.0",
     "@types/node": "^18",
     "eslint": "^8",
     "eslint-config-oclif": "^5",
