--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,11 @@
     "rootDir": "src",
     "strict": true,
     "target": "es2022",
-    "moduleResolution": "node16"
+    "moduleResolution": "Node16",
+    "allowSyntheticDefaultImports": true
   },
   "include": ["./src/**/*"],
+  // "exclude": ["./src/cpi-odata"],
   "ts-node": {
     "esm": true
   }
