--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
     "declaration": true,
     "module": "Node16",
+    "moduleResolution": "Node16",
     "outDir": "dist",
+    "resolveJsonModule": true,
     "rootDir": "src",
     "strict": true,
-    "target": "es2022",
-    "moduleResolution": "Node16",
-    "allowSyntheticDefaultImports": true
+    "target": "es2022"
   },
   "include": ["./src/**/*"],
   // "exclude": ["./src/cpi-odata"],
