--- a/package.json
+++ b/package.json
@@ -36,15 +36,9 @@
     "commands": "./dist/commands",
     "dirname": "sicm",
     "plugins": [
-      "@oclif/plugin-help",
-      "@oclif/plugin-plugins"
+      "@oclif/plugin-help"
     ],
-    "topicSeparator": " ",
-    "topics": {
-      "hello": {
-        "description": "Say hello to the world and others"
-      }
-    }
+    "topicSeparator": " "
   },
   "dependencies": {
     "@inquirer/prompts": "^4.1.0",
