--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
     "unicorn/no-await-expressØion-member": "off",
     "unicorn/no-useless-undefined": "off",
     "valid-jsdoc": "off",
-    "padding-line-between-statements": "off"
+    "padding-line-between-statements": "off",
+    "unicorn/no-negated-condition": "off"
   }
 }
