--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "target": "es2022"
   },
   "include": ["./src/**/*"],
+  "exclude": ["node_modules", "dist", "bin", "artifact-variables.js"],
   "ts-node": {
     "esm": true
   }
