--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@oclif/prettier-config": "^0.2.1",
     "@sap-cloud-sdk/generator": "^3.12.0",
     "@types/node": "^18",
+    "@types/npm": "^7.19.3",
     "eslint": "^8",
     "eslint-config-oclif": "^5",
     "eslint-config-oclif-typescript": "^3",
